---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n0 TRLR\r\n0 BADBADBAD\r\n"
expression: "format!(\"{:?}\", parser.attach_source(err))"
input_file: gedcomfy/tests/format_inputs/after_trlr.ged
---
  × Unable to determine version of GEDCOM file
  ╰─▶ GEDCOM file appeared to be syntactically valid, but no version could be found
